# learn_lakeformation

./: .env.example  .gitignore  README.md  pyproject.toml
pii_classifier/: handler.py
terraform/: athena.tf  etl.py  etl_g4.py  etl_g5.py  glue.tf  iam.tf  lakeformation.tf  outputs.tf  quicksight.tf  s3.tf
terraform2/: athena.tf  etl.py  etl_g4.py  glue.tf  iam.tf  lakeformation.tf  locals.tf  main.tf  outputs.tf  s3.tf  variables.tf
